--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,16 +131,18 @@
   <string name="downloader_err_file_exists">Download failed (File exists)</string>
   <string name="downloader_err_storage_space">Download failed (Insufficient space)</string>
 
-  <string name="installopts_title">Aliucord provides several customizations at installation time that are not configurable once installed.</string>
+  <string name="installopts_title">Aliucord provides several customizations at installation time that are not able to be changed once installed.</string>
   <string name="installopts_pkgname_title">Package Name</string>
   <string name="installopts_pkgname_desc">The package name is a unique identifier for all apps. Using different ones can allow for multiple installations of Aliucord.</string>
   <string name="installopts_pkgname_invalid">Invalid package name!</string>
   <string name="installopts_pkgname_taken">Target app will be overwritten!</string>
   <string name="installopts_pkgname_ok">Valid package name!</string>
   <string name="installopts_appname_title">App Name</string>
-  <string name="installopts_appname_desc">The app name is what\'s displayed in the launcher. This should be changed on secondary installations for ease of use.</string>
+  <string name="installopts_appname_desc">The app name is what\'s displayed in your home launcher. This should be changed on secondary installations for ease of use.</string>
   <string name="installopts_debuggable_title">Debuggable</string>
   <string name="installopts_debuggable_desc">Enable the debuggable manifest flag. Only use this if you know what you are doing!</string>
   <string name="installopts_icon_title">Replace app icon</string>
   <string name="installopts_icon_desc">Changes the app\'s icon to use Aliucord branding instead of Discord\'s own.</string>
+  <string name="installopts_divider_basic">Basic</string>
+  <string name="installopts_divider_advanced">Advanced</string>
 </resources>
