--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,12 @@
   <string name="action_apply">Apply</string>
   <string name="action_confirm">Confirm</string>
   <string name="action_dismiss">Dismiss</string>
+  <string name="action_install">Install</string>
+  <string name="action_uninstall">Uninstall</string>
   <string name="action_add_install">Add Installation</string>
   <string name="action_update">Update</string>
   <string name="action_clear">Clear</string>
   <string name="action_launch">Launch</string>
-  <string name="action_uninstall">Uninstall</string>
   <string name="action_close">Close</string>
   <string name="action_open_settings">Open settings</string>
   <string name="action_search">Search</string>
@@ -28,6 +29,7 @@
   <string name="action_cleared_cache">Cleared cache!</string>
   <string name="action_exit_anyways">Exit anyways</string>
   <string name="action_open_info">Open info</string>
+  <string name="action_reset_default">Reset to default</string>
 
   <string name="permissions_grant_title">Grant Permissions</string>
   <string name="permissions_grant_body">In order for Aliucord Manager to function, file permissions are required. Since shared data is stored in ~/Aliucord, permissions are required in order to access it.</string>
@@ -39,19 +41,9 @@
   <string name="settings_appearance">Appearance</string>
   <string name="settings_developer_options">Developer options</string>
   <string name="setting_clear_cache">Clear cache</string>
-  <string name="setting_replace_icon">Replace app icon</string>
-  <string name="setting_replace_icon_desc">Uses the Aliucord variant as opposed to Discord\'s own icon</string>
-  <string name="setting_debuggable">Debuggable</string>
-  <string name="setting_debuggable_desc">Enable debuggable flag</string>
-  <string name="setting_app_name">App Name</string>
-  <string name="setting_package_name">Package Name</string>
-  <string name="setting_target_version">Download Version (RN only)</string>
   <string name="setting_dynamic_color">Dynamic color</string>
-  <string name="setting_hermes_replace_libcpp">Replace libc++ (RN only)</string>
-  <string name="setting_hermes_replace_libcpp_desc">Downloads and uses libc++ from patched hermes</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
   <string name="setting_keep_patched_apks_desc">Don\'t delete patched APKs after installing (for installing manually)</string>
-  <string name="settings_invalid_package_name">Invalid package name, reset to com.aliucord</string>
 
   <string name="theme_system">System</string>
   <string name="theme_dark">Dark</string>
@@ -114,6 +106,7 @@
   <string name="install_step_dl_aliuhook">Downloading Aliuhook library</string>
   <string name="install_step_copy">Copying dependencies</string>
   <string name="install_step_patch_manifests">Patching apk manifests</string>
+  <string name="install_step_patch_icon">Patching app icon</string>
   <string name="install_step_add_injector">Adding Aliucord injector</string>
   <string name="install_step_add_aliuhook">Adding Aliuhook library</string>
   <string name="install_step_alignment">Aligning APKs</string>
@@ -137,4 +130,19 @@
   <string name="downloader_err_response">Download failed (Invalid response)</string>
   <string name="downloader_err_file_exists">Download failed (File exists)</string>
   <string name="downloader_err_storage_space">Download failed (Insufficient space)</string>
+
+  <string name="installopts_title">Aliucord provides several customizations at installation time that are not able to be changed once installed.</string>
+  <string name="installopts_pkgname_title">Package Name</string>
+  <string name="installopts_pkgname_desc">The package name is a unique identifier for all apps. Using different ones can allow for multiple installations of Aliucord.</string>
+  <string name="installopts_pkgname_invalid">Invalid package name!</string>
+  <string name="installopts_pkgname_taken">Target app will be overwritten!</string>
+  <string name="installopts_pkgname_ok">Valid package name!</string>
+  <string name="installopts_appname_title">App Name</string>
+  <string name="installopts_appname_desc">The app name is what\'s displayed in your home launcher. This should be changed on secondary installations for ease of use.</string>
+  <string name="installopts_debuggable_title">Debuggable</string>
+  <string name="installopts_debuggable_desc">Enable the debuggable manifest flag. Only use this if you know what you are doing!</string>
+  <string name="installopts_icon_title">Replace app icon</string>
+  <string name="installopts_icon_desc">Changes the app\'s icon to use Aliucord branding instead of Discord\'s own.</string>
+  <string name="installopts_divider_basic">Basic</string>
+  <string name="installopts_divider_advanced">Advanced</string>
 </resources>
