--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -281,4 +281,6 @@
   <string name="fun_fact_10">Aliucord uses the *real* old UI, from mid-2022!</string>
   <string name="fun_fact_11">There was an attempt to make Aliucord run on iOS…</string>
   <string name="fun_fact_12" translatable="false">veeeee 😭</string>
+
+  <string name="time_elapsed_seconds">%.2fs</string>
 </resources>
